--- a/Farm-logistics/account.html
+++ b/Farm-logistics/account.html
@@ -27,14 +27,17 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#" class="nav__link active-link">Dashboard</a>
-                        </li>  
-                        <li class="nav__item">
-                            <a href="account.html" class="nav__link">Account</a>
+                            <a href="#dashboard" class="nav__link active-link">Dashboard</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#settings" class="nav__link">Settings</a> 
-                       </li>
+                            <a href="#history" class="nav__link">History</a>
+                        </li> 
+                        <li class="nav__item">
+                            <a href="#account" class="nav__link">Account</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#settings" class="nav__link">Settings</a>
+                        </li>
                         <li class="nav__item">
                             <a href="./index.html" class="nav__link button-log">Log Out</a>
                         </li>
@@ -58,13 +61,9 @@
         </header>
 
         <main class="main">
-            <div class="img__details">
-                <img src="Rectangle 271.png" class="main__img" alt="">
+            <div class="main__header">
+                
             </div>
-            <div class="button__details">
-                <button class="button main__btn">Move Your Goods</button>
-            </div>
-            
         </main>
 
         <!--==================== FOOTER ====================-->
