--- a/Trash/Dash/profile.html
+++ b/Trash/Dash/profile.html
@@ -276,7 +276,8 @@
                     </div>
                   </div>
                   <div class="col-lg-12">
-                      <div class="form-group focused">
+                      <div class="form-group.
+                       focused">
                         <!-- <label class="form-control-label" for="input-last-name">Last name</label> -->
                         <input type="submit" id="input-save" class="form-control form-control-alternative" placeholder="Save" value="Save">
                       </div>
