--- a/Trash/SignIn/index.html
+++ b/Trash/SignIn/index.html
@@ -15,13 +15,13 @@
     <div class="cover">
       <div class="front"> 
         <div class="text">
-          <img src="../Images/sign up.jpg" alt=""> 
+          <img src="../images (1).jpeg" alt=""> 
         </div>
       </div>
       <div class="back"> 
         
         <div class="text">
-          <img class="backImg" src="../Images/login.jpg" alt=""> 
+          <img class="backImg" src="../images.jpeg" alt=""> 
         </div>
       </div>
     </div>
