--- a/Trash/SignUp/index.html
+++ b/Trash/SignUp/index.html
@@ -11,26 +11,25 @@
    </head>
 <body>
   <div class="container">
-    <input type="checkbox" id="flip"> 
-    
+    <input type="checkbox" id="flip">
     <div class="cover">
       <div class="front"> 
         <div class="text">
-          <img src="../truck1.jpg" alt=""> 
+          <img src="../Images/login.jpg" alt=""> 
         </div>
       </div>
-      <div class="back">  
+      <div class="back"> 
+        
         <div class="text">
-          <img  src="../truck.jpg" alt=""> 
+          <img class="backImg" src="../Images/sign up.jpg" alt=""> 
         </div>
       </div>
-    </div>  
-
+    </div>
     <div class="forms">
       <div class="form-content">
         <div class="signup-form">
-          <div class="title">Sign Up</div>
-          <form action="../profile.html">
+          <div class="title">Get Started</div>
+          <form action="../SignIn/index.html">
             <div class="input-boxes">
               <div class="input-box">
                 <i class="fas fa-user"></i>
@@ -43,7 +42,7 @@
               <div>
                <label class="form-control-label" for="input-country">Register As:</label><br>
                 Company  <input type="radio" id="input-postal-code"  placeholder="Company"> <br>
-                Individual  <input type="radio" id="input-postal-code"  placeholder="Person">
+                Person  <input type="radio" id="input-postal-code"  placeholder="Person">
               </div>
               <div class="input-box">
                 <i class="fas fa-envelope"></i>
@@ -65,9 +64,9 @@
           </form>
         </div>
         <div class="login-form">
-          <div class="title">Login</div>
-          <!-- <p>Login to manage your account</p> -->
-          <form action="../profile.html">
+          <div class="title">Weclome</div>
+          <p>Login to manage your account</p>
+          <form action="../Dash/index.html">
             <div class="input-boxes">
               <div class="input-box">
                 <i class="fas fa-envelope"></i>
