--- a/Farm-logistics/index.html
+++ b/Farm-logistics/index.html
@@ -47,7 +47,7 @@
                     </ul>
 
                     <div class="nav__close" id="nav-close">
-                        <i class="ri-close-line">Close</i>
+                        <i class="ri-close-line"></i>
                     </div>
                 </div>
 
@@ -56,7 +56,7 @@
                     <!-- <a href="#"><i class="ri-profile-line change-theme">Pro</i></a> -->
 
                     <div class="nav__toggle" id="nav-toggle">
-                        <i class="ri-menu-line">Menu</i>
+                        <i class="ri-menu-line"></i>
                     </div>
                 </div>
             </nav>
