--- a/Farm-logistics/profile.html
+++ b/Farm-logistics/profile.html
@@ -41,7 +41,7 @@
                     </ul>
 
                     <div class="nav__close" id="nav-close">
-                        <i class="ri-close-line">Close</i>
+                        <i class="ri-close-line"></i>
                     </div>
                 </div>
 
@@ -51,7 +51,7 @@
                     </div>
 
                     <div class="nav__toggle" id="nav-toggle">
-                        <i class="ri-menu-line">Menu</i>
+                        <i class="ri-account-circle-fill"></i>
                     </div>
                 </div>
             </nav>
