--- a/Farm-logistics/index.html
+++ b/Farm-logistics/index.html
@@ -20,7 +20,7 @@
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
-                    <img src="image/RexoFarm.jpg" alt="">
+                    <img src="./image/RexoFarm.jpg" alt="">
                     <!-- <i class="ri-leaf-line nav__logo-icon"></i> Plantex -->
                 </a>
 
@@ -66,7 +66,7 @@
             <!--==================== HOME ====================-->
             <section class="home" id="home">
                 <div class="home__container container grid">
-                    <img src="image/truck.jpg" alt="" class="home__img">
+                    <img src="./image/truck.jpg" alt="" class="home__img">
 
                     <div class="home__data">
                         <h1 class="home__title">
@@ -85,7 +85,7 @@
             <!--==================== ABOUT ====================-->
             <section class="about section container" id="about">
                 <div class="about__container grid">
-                    <img src="image/truck1.jpg" alt="" class="about__img">
+                    <img src="./image/truck1.jpg" alt="" class="about__img">
 
                     <div class="about__data">
                         <h2 class="section__title about__title">
@@ -366,24 +366,11 @@
             <div class="footer__container container grid">
                 <div class="footer__content">
                     <a href="#" class="footer__logo">
-                        <img src="image/RexoFarm.jpg" alt="">
+                        <img src="./image/RexoFarm.jpg" alt="">
                     </a>
                 </div>
 
-                <!-- <div class="footer__content">
-                    <h3 class="footer__title">
-                        Subscribe to our newsletter <br> to stay update
-                    </h3>
-
-                    <div class="footer__subscribe">
-                        <input type="email" placeholder="Enter your email" class="footer__input">
-
-                        <button class="button button--flex footer__button">
-                            Subscribe
-                            <i class="ri-arrow-right-up-line button__icon"></i>
-                        </button>
-                    </div>
-                </div> -->
+                 
 
                 <div class="footer__content">
                     <h3 class="footer__title">Our Address</h3>
