--- a/Farm-logistics/profile.html
+++ b/Farm-logistics/profile.html
@@ -20,7 +20,7 @@
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
-                    <img src="RexoFarm.jpg" alt="">
+                    <img src="./RexoFarm.jpg" alt="">
                     <!-- <i class="ri-leaf-line nav__logo-icon"></i> Plantex -->
                 </a>
 
@@ -59,7 +59,7 @@
 
         <main class="main">
             <div class="img__details">
-                <img src="Rectangle 271.png" class="main__img" alt="">
+                <img src="./Image/Rectangle 271.png" class="main__img" alt="">
             </div>
             <div class="button__details">
                 <button class="button main__btn">Move Your Goods</button>
