--- a/Farm-logistics/index.html
+++ b/Farm-logistics/index.html
@@ -20,7 +20,7 @@
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
-                    <img src="../Farm-logistics/Image/RexoFarm.jpg" alt="">
+                    <img src="RexoFarm.jpg" alt="">
                     <!-- <i class="ri-leaf-line nav__logo-icon"></i> Plantex -->
                 </a>
 
