--- a/Farm-logistics/index.html
+++ b/Farm-logistics/index.html
@@ -20,7 +20,7 @@
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
-                    <img src="./RexoFarm.jpg" alt="">
+                    <img src="RexoFarm.jpg" alt="">
                     <!-- <i class="ri-leaf-line nav__logo-icon"></i> Plantex -->
                 </a>
 
@@ -66,7 +66,7 @@
             <!--==================== HOME ====================-->
             <section class="home" id="home">
                 <div class="home__container container grid">
-                    <img src="./image/truck.jpg" alt="" class="home__img">
+                    <img src="truck.jpg" alt="" class="home__img">
 
                     <div class="home__data">
                         <h1 class="home__title">
@@ -85,7 +85,7 @@
             <!--==================== ABOUT ====================-->
             <section class="about section container" id="about">
                 <div class="about__container grid">
-                    <img src="./image/truck1.jpg" alt="" class="about__img">
+                    <img src="truck1.jpg" alt="" class="about__img">
 
                     <div class="about__data">
                         <h2 class="section__title about__title">
@@ -366,7 +366,7 @@
             <div class="footer__container container grid">
                 <div class="footer__content">
                     <a href="#" class="footer__logo">
-                        <img src="./image/RexoFarm.jpg" alt="">
+                        <img src="RexoFarm.jpg" alt="">
                     </a>
                 </div>
 
