--- a/Farm-logistics/account.html
+++ b/Farm-logistics/account.html
@@ -156,7 +156,7 @@
                             <div class="col-lg-12">
                               <div class="form-group focused">
                                 <!-- <label class="form-control-label" for="input-last-name">Last name</label> -->
-                                <input type="submit" id="input-save" class="form-control form-control-alternative" placeholder="Save" value="Save">
+                                <input type="submit" id="input-save" class="form-control form-control-alternative" placeholder="Next" value="Next">
                               </div>
                             </div>
                           </div>
