--- a/Farm-logistics/SignUp/index.html
+++ b/Farm-logistics/SignUp/index.html
@@ -55,7 +55,7 @@
               </div>
               <div class="input-box button">
                 <!-- <i class="fas fa-lock"></i> -->
-                <input type="submit" placeholder="SignUp">
+                <input type="submit" placeholder="SignUp" value="Signup">
               </div>
               <!-- <a href="../SignIn/index.html" class="button input-box">
                 SignUp
@@ -80,7 +80,7 @@
               <div class="text"><a href="#">Forgot password?</a></div>
               <div class="input-box button">
                 <!-- <i class="fas fa-lock"></i> -->
-                <input type="submit" placeholder="Login">
+                <input type="submit" placeholder="Login" value="Login">
               </div>
               <!-- <a href="../Dashboard/index.html" class="button input-box">
                 Login
