--- a/Farm-logistics/account1.html
+++ b/Farm-logistics/account1.html
@@ -78,8 +78,8 @@
                         </div>
                       </div>
                       <div class="card-body"><br>
-                          <h2>Profile</h2><br>
-                        <form>
+                        <h2>Profile</h2><br>
+                        <form action="account2.html">
                           <h6 class="heading-small text-muted mb-4">Edit Profile</h6>
                           
                           <hr class="my-4">
@@ -134,7 +134,7 @@
                                 <div class="form-group.
                                  focused">
                                   <!-- <label class="form-control-label" for="input-last-name">Last name</label> -->
-                                  <input type="submit" id="input-save" class="form-control form-control-alternative" placeholder="Save" value="Save">
+                                  <input type="submit" id="input-save" class="form-control form-control-alternative" placeholder="Next" value="Next">
                                 </div>
                               </div>
                           </div>
