--- a/Farm-logistics/acc3.html
+++ b/Farm-logistics/acc3.html
@@ -79,7 +79,7 @@
                       </div>
                       <div class="card-body">
                           <h2>Profile</h2><br>
-                        <form>
+                        <form action=profile.html>
                           <h6 class="heading-small text-muted mb-4">Edit Profile</h6>
                           
                           <hr class="my-4">
