--- a/Farm-logistics/account.html
+++ b/Farm-logistics/account.html
@@ -79,7 +79,7 @@
                       </div><br>
                       <div class="card-body">
                           <h2>Profile</h2><br>
-                        <form>
+                        <form action="account1.html">
                           <h6 class="heading-small text-muted mb-4">Edit Profile</h6>
                           <div class="pl-lg-4">
                             <div class="row">
@@ -159,10 +159,7 @@
                                 <input type="submit" id="input-save" class="form-control form-control-alternative" placeholder="Next" value="Next">
                               </div>
                             </div>
-                          </div>
-                           
-                          <hr class="my-4">
-                          <!-- Description -->
+                          </div> 
                           
                         </form>
                       </div>
