--- a/Farm-logistics/account2.html
+++ b/Farm-logistics/account2.html
@@ -78,8 +78,8 @@
                         </div>
                       </div><br>
                       <div class="card-body">
-                          <h2>Profile</h2><br>
-                        <form>
+                        <h2>Profile</h2><br>
+                        <form action="acc3.html">
                           <h6 class="heading-small text-muted mb-4">Edit Profile</h6>
                           
                           
@@ -127,7 +127,7 @@
                             <div class="col-lg-12">
                                 <div class="form-group focused">
                                   <!-- <label class="form-control-label" for="input-last-name">Last name</label> -->
-                                  <input type="submit" id="input-save" class="form-control form-control-alternative" placeholder="Save" value="Save">
+                                  <input type="submit" id="input-save" class="form-control form-control-alternative" placeholder="Next" value="Next">
                                 </div>
                               </div>
                           </div>
