--- a/Farm-logistics/index.html
+++ b/Farm-logistics/index.html
@@ -75,7 +75,7 @@
                         <p class="home__description">
                             Get your Farm Produce to the Right Destination at the Right time.
                         </p>
-                        <a href="#about" class="button button--flex">
+                        <a href="./SignUp/index.html" class="button button--flex">
                             Move Your Goods <i class="ri-arrow-right-down-line button__icon"></i>
                         </a>
                     </div>
