--- a/Farm-logistics/profile.html
+++ b/Farm-logistics/profile.html
@@ -60,8 +60,10 @@
             <div class="img__details">
                 <img src="Rectangle 271.png" class="main__img" alt="">
             </div>
-            <div class="button__details">
-                <button class="button main__btn">Move Your Goods</button>
+            <div  class="button__details request">
+                <a href="./Request/requestForm.html">
+                    <button class="button main__btn">Move Your Goods</button>
+                </a>
             </div>
             
         </main>
