--- a/Farm-logistics/Request/requestForm.html
+++ b/Farm-logistics/Request/requestForm.html
@@ -8,7 +8,7 @@
 		"width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="requestForm.css">
 	<title>
-		Build a Survey Form using HTML and CSS
+		Request Form
 	</title> 
 </head>
 
@@ -16,7 +16,7 @@
 	<h1>Request form</h1>
 
 	<!-- Create Form -->
-	<form id="form">
+	<form id="form" action="checkout.html">
 
 		<div class="form-control">
 			<label for="role" id="label-role">
@@ -24,11 +24,11 @@
 			</label>
 			
 			<!-- Dropdown options -->
-			<select name="role" id="role" >
+			<select name="role" id="role" required>
 				<option value="student">Select types</option>
-				<option value="intern">Intern</option>
+				<option value="intern">Frozen Food</option>
 				<option value="professional">
-					Professional
+					Frozen Food
 				</option>
 				<option value="other">Other</option>
 			</select>
@@ -44,7 +44,7 @@
 			<!-- Input Type Text -->
 			<input type="date"
 				id="age"
-				placeholder="Pickup Date" />
+				placeholder="Pickup Date" required/>
 		</div>
 
 		<div class="form-control">
@@ -55,7 +55,7 @@
 			<!-- Input Type Text -->
 			<input type="text"
 				id="age"
-				placeholder="Quantity" />
+				placeholder="Quantity" required/>
 		</div>
 
 		<div class="form-control">
@@ -66,7 +66,7 @@
 			<!-- Input Type Text -->
 			<input type="text"
 				id="age"
-				placeholder="Address" />
+				placeholder="Address" required/>
 		</div>
 
 		<div class="form-control">
@@ -77,7 +77,7 @@
 			<!-- Input Type Text -->
 			<input type="text"
 				id="age"
-				placeholder="Pickup Landmark" />
+				placeholder="Pickup Landmark" required />
 		</div>
 
 		<div class="form-control">
@@ -88,7 +88,7 @@
 			<!-- Input Type Text -->
 			<input type="text"
 				id="age"
-				placeholder="Address" />
+				placeholder="Address" required/>
 		</div>
 		 
 		<div class="form-control">
@@ -99,7 +99,7 @@
 			<!-- Input Type Text -->
 			<input type="text"
 				id="age"
-				placeholder="Delivery Landmark" />
+				placeholder="Delivery Landmark" required/>
 		</div>
  
 
